--- a/config/optimize_biBTSP_synthetic_alt_config.yaml
+++ b/config/optimize_biBTSP_synthetic_alt_config.yaml
@@ -88,9 +88,7 @@ kwargs:
   verbose: 1
   num_induction_laps: 3
   min_delta_weight: -0.2
-  peak_delta_ramp: 25.
-  min_delta_ramp: -60.
-  # vd_min: 0.
+  max_dend_depo: 20.
   default_run_vel: 25.
   induction_loc:
     '1': 120.
@@ -99,15 +97,12 @@ kwargs:
   target_peak_delta_weight: 3.
   target_peak_shift_1: -5.
   target_peak_val_1: 8.
-  target_peak_val_1_depo: 9.5
-  target_ramp_offset_1_depo: 10.
-  target_ramp_offset_1_hyper: -40.
-  target_ramp_offset_2_hyper: -25.
   weights_path_distance_threshold: 1.25
 objective_names:
 - induction1_residual_score
 - induction2_residual_score
 - ramp_amp_after_first_plateau
+- weights_path_distance
 optimization_title: biBTSP_synthetic_alt
 param_gen: PopulationAnnealing
 param_names:
@@ -125,6 +120,7 @@ target_range:
   residuals: 0.1
   weights_smoothness: 0.015
   ramp_amp_after_first_plateau: 0.01
+  weights_path_distance: 0.1
 target_val:
   ramp_amp_after_first_plateau: 4.
 x0:
