--- a/config/optimize_biBTSP_synthetic_hybrid_alt2_step2_config.yaml
+++ b/config/optimize_biBTSP_synthetic_hybrid_alt2_step2_config.yaml
@@ -3,7 +3,7 @@ bounds:
   - 0.001
   - 1.
   phi_half_width: !!python/tuple
-  - 0.001
+  - 0.05
   - 1.
   f_dep_th: !!python/tuple
   - 0.001
@@ -152,5 +152,5 @@ x0:
   k_pot: 6.347702E-01
   local_signal_decay: 8.146532E+02
   peak_delta_weight: 4.899299E+00
-  phi_half_width: 2.414883E-02
-  phi_th: 3.196775E-02
+  phi_half_width: 0.25
+  phi_th: 0.25
