--- a/config/optimize_biBTSP_synthetic_hybrid_alt2_step2_config.yaml
+++ b/config/optimize_biBTSP_synthetic_hybrid_alt2_step2_config.yaml
@@ -107,7 +107,7 @@ kwargs:
   target_peak_delta_weight: 3.
   target_peak_shift_1: -5.
   target_peak_val_1: 8.
-  target_peak_val_1_depo: 8.5
+  target_peak_val_1_depo: 9.
   target_ramp_offset_1_depo: 10.
   target_ramp_offset_1_hyper: -20.
   target_ramp_offset_2_hyper: -20.
