--- a/config/optimize_biBTSP_synthetic_hybrid_config.yaml
+++ b/config/optimize_biBTSP_synthetic_hybrid_config.yaml
@@ -1,18 +1,6 @@
 bounds:
-  vd_half_width: !!python/tuple
-  - 0.001
-  - 100.
-  vd_th_pot: !!python/tuple
-  - -40.
-  - 15.
-  vd_th_dep: !!python/tuple
-  - -40.
-  - 15.
-  f_pot_half_width: !!python/tuple
-  - 0.001
-  - 1.
-  f_pot_th: !!python/tuple
-  - 0.001
+  phi_min: !!python/tuple
+  - 0
   - 1.
   f_dep_th: !!python/tuple
   - 0.001
@@ -26,36 +14,25 @@ bounds:
   k_dep: !!python/tuple
   - 0.01
   - 10.
-  local_signal_rise: !!python/tuple
-  - 5.
-  - 200.
   local_signal_decay: !!python/tuple
   - 50.
-  - 2500.
-  global_signal_rise: !!python/tuple
-  - 5.
-  - 200.
+  - 1500.
   global_signal_decay: !!python/tuple
   - 50.
-  - 2500.
+  - 1500.
+  peak_delta_weight: !!python/tuple
+  - 1.5
+  - 5.
 default_params:
 rel_bounds:
-- - local_signal_decay
-  - '>'
-  - 1.0
-  - local_signal_rise
-- - global_signal_decay
-  - '>'
-  - 1.0
-  - global_signal_rise
-- - local_signal_decay
-  - '>'
-  - 1.0
-  - global_signal_decay
-- - k_pot
-  - '>'
-  - 1.0
-  - k_dep
+#- - local_signal_decay
+#  - '>'
+#  - 1.0
+#  - global_signal_decay
+#- - k_pot
+#  - '>'
+#  - 1.0
+#  - k_dep
 feature_names:
 - induction1_delta_val_at_target_peak
 - induction1_delta_val_at_model_peak
@@ -109,73 +86,63 @@ get_features_stages:
 get_objectives:
   optimize_biBTSP_synthetic_hybrid: get_objectives
 kwargs:
-  data_file_name: 20190711_biBTSP_data_calibrated_input.hdf5
+  data_file_name: 20200427_biBTSP_data.hdf5
   input_field_width: 90.  # cm
   verbose: 1
+  num_induction_laps: 3
   min_delta_weight: -0.2
-  min_delta_ramp: -60.
-  plateau_delta_vm: 25.
-  peak_delta_ramp: 40.
-  peak_delta_weight: 2.5
-  vd_min: 0.
+  max_dend_depo: 20.
+  min_dend_depo: -20.
+  phi_max: 1.
   default_run_vel: 25.
   induction_loc:
     '1': 120.
     '2': 45.
-  target_ramp_width: 160.
-  target_peak_delta_weight: 2.5
-  target_peak_shift_1: -10.
-  target_peak_shift_2: 0.
+  target_ramp_width: 150.
+  target_peak_delta_weight: 3.
+  target_peak_shift_1: -5.
   target_peak_val_1: 8.
-  target_peak_val_1_depo: 12.  # 12.
-  target_peak_val_2: 8.
-  target_min_val_2: 4.
+  target_peak_val_1_depo: 9.5
+  target_peak_val_1_hyper: 6.5
   target_ramp_offset_1_depo: 10.
-  target_ramp_offset_1_hyper: -40.
-  target_ramp_offset_2_hyper: -25.
+  target_ramp_offset_1_hyper: -20.
+  target_ramp_offset_2_hyper: -20.
+  weights_path_distance_threshold: 1.25
 objective_names:
 - induction1_residual_score
 - induction1_depo_residual_score
 - induction1_hyper_residual_score
 - induction2_residual_score
 - induction2_hyper_residual_score
-- self_consistent_delta_residual_score
+- ramp_amp_after_first_plateau
+- weights_path_distance
 optimization_title: biBTSP_synthetic_hybrid
 param_gen: PopulationAnnealing
 param_names:
-- vd_half_width
-- vd_th_pot
-- vd_th_dep
-- f_pot_half_width
-- f_pot_th
+- phi_min
 - f_dep_th
 - f_dep_half_width
 - k_pot
 - k_dep
-- local_signal_rise
 - local_signal_decay
-- global_signal_rise
 - global_signal_decay
+- peak_delta_weight
 target_range:
   ramp_offset: 0.01
   delta_min_val: 0.01
   delta_peak_val: 0.01
   residuals: 0.1
-  weights_smoothness: 0.005
+  weights_smoothness: 0.015
   ramp_amp_after_first_plateau: 0.01
+  weights_path_distance: 0.1
 target_val:
-  ramp_amp_after_first_plateau: 5.
+  ramp_amp_after_first_plateau: 4.
 x0:
-  f_dep_half_width: 8.036030E-03
-  f_dep_th: 2.855647E-02
-  f_pot_half_width: 7.600603E-01
-  f_pot_th: 1.385298E-01
-  global_signal_decay: 3.570670E+02
-  global_signal_rise: 3.555186E+01
-  k_dep: 3.126094E-01
-  k_pot: 2.280166E+00
-  local_signal_decay: 1.191872E+03
-  local_signal_rise: 1.939650E+02
-  vd_half_width: 10.
-  vd_th_pot: 0.
-  vd_th_dep: -40.
+  f_dep_half_width: 9.653914E-02
+  f_dep_th: 2.976247E-03
+  global_signal_decay: 6.234602E+02
+  k_dep: 3.109035E-01
+  k_pot: 6.347702E-01
+  local_signal_decay: 8.146532E+02
+  peak_delta_weight: 4.899299E+00
+  phi_min: 0.25
