--- a/config/optimize_biBTSP_synthetic_hybrid_config.yaml
+++ b/config/optimize_biBTSP_synthetic_hybrid_config.yaml
@@ -2,10 +2,10 @@ bounds:
   phi_min: !!python/tuple
   - 0
   - 1.
-  phi_th: !!python/tuple
+  spine_th: !!python/tuple
   - 0.05
   - 1.
-  phi_half_width: !!python/tuple
+  spine_half_width: !!python/tuple
   - 0.05
   - 1.
   f_dep_th: !!python/tuple
@@ -120,14 +120,14 @@ objective_names:
 - induction1_hyper_residual_score
 - induction2_residual_score
 - induction2_hyper_residual_score
-- ramp_amp_after_first_plateau
+# - ramp_amp_after_first_plateau
 - weights_path_distance
 optimization_title: biBTSP_synthetic_hybrid
 param_gen: PopulationAnnealing
 param_names:
 - phi_min
-- phi_th
-- phi_half_width
+- spine_th
+- spine_half_width
 - f_dep_th
 - f_dep_half_width
 - k_pot
@@ -154,5 +154,5 @@ x0:
   local_signal_decay: 8.146532E+02
   peak_delta_weight: 4.899299E+00
   phi_min: 0.25
-  phi_th: 0.5
-  phi_half_width: 0.5
+  spine_th: 0.5
+  spine_half_width: 0.5
