--- a/config/optimize_biBTSP_synthetic_hybrid_config.yaml
+++ b/config/optimize_biBTSP_synthetic_hybrid_config.yaml
@@ -28,7 +28,7 @@ bounds:
   - 1500.
   peak_delta_weight: !!python/tuple
   - 1.5
-  - 5.
+  - 6.
 default_params:
 rel_bounds:
 #- - local_signal_decay
@@ -97,7 +97,7 @@ kwargs:
   verbose: 1
   num_induction_laps: 3
   min_delta_weight: -0.2
-  max_dend_depo: 20.
+  max_dend_depo: 10.
   min_dend_depo: -20.
   default_run_vel: 25.
   induction_loc:
@@ -107,8 +107,8 @@ kwargs:
   target_peak_delta_weight: 3.
   target_peak_shift_1: -5.
   target_peak_val_1: 8.
-  target_peak_val_1_depo: 9.
-  target_peak_val_1_hyper: 6.5
+  target_peak_val_1_depo: 9.5
+  target_peak_val_1_hyper: 6.
   target_ramp_offset_1_depo: 10.
   target_ramp_offset_1_hyper: -20.
   target_ramp_offset_2_hyper: -20.
