--- a/config/optimize_biBTSP_synthetic_hybrid_norm_config.yaml
+++ b/config/optimize_biBTSP_synthetic_hybrid_norm_config.yaml
@@ -18,11 +18,11 @@ bounds:
   - 0.0001
   - 1.
   k_pot: !!python/tuple
-  - 0.001
-  - 10.
+  - 0.0001
+  - 2.
   k_dep: !!python/tuple
-  - 0.001
-  - 10.
+  - 0.0001
+  - 2.
   local_signal_decay: !!python/tuple
   - 50.
   - 1500.
@@ -118,8 +118,8 @@ kwargs:
   target_peak_delta_weight: 3.
   target_peak_shift_1: -5.
   target_peak_val_1: 8.
-  target_peak_val_1_depo: 9.5
-  target_peak_val_1_hyper: 6.
+  target_peak_val_1_depo: 9.
+  target_peak_val_1_hyper: 6.5
   target_ramp_offset_1_depo: 10.
   target_ramp_offset_1_hyper: -20.
   target_ramp_offset_2_hyper: -20.
