--- a/config/optimize_biBTSP_WD_D_cli_config.yaml
+++ b/config/optimize_biBTSP_WD_D_cli_config.yaml
@@ -19,13 +19,13 @@ bounds:
   - 10.
   local_signal_decay: !!python/tuple
   - 50.
-  - 1500.
+  - 1750.
   global_signal_decay: !!python/tuple
   - 50.
-  - 1500.
+  - 1750.
   peak_delta_weight: !!python/tuple
   - 1.5
-  - 4.
+  - 6.
 default_params:
 rel_bounds:
 - - local_signal_decay
@@ -88,11 +88,13 @@ kwargs:
   input_field_width: 90.  # cm
   verbose: 1
   min_delta_weight: -0.2
+  weights_path_distance_threshold: 2.
 objective_names:
 - spont_residual_score
 - exp1_residual_score
 - exp2_residual_score
 - exp3_residual_score
+- weights_path_distance
 optimization_title: biBTSP_WD_D
 param_gen: PopulationAnnealing
 param_names:
@@ -111,6 +113,7 @@ target_range:
   delta_peak_val: 0.01
   residuals: 0.1
   weights_smoothness: 0.015
+  weights_path_distance: 0.1
 target_val:
 x0:
   global_signal_decay: 4.489167E+02
