--- a/config/optimize_biBTSP_WD_D_cli_config.yaml
+++ b/config/optimize_biBTSP_WD_D_cli_config.yaml
@@ -1,15 +1,15 @@
 bounds:
   f_pot_half_width: !!python/tuple
-  - 0.001
+  - 0.0001
   - 1.
   f_pot_th: !!python/tuple
-  - 0.001
+  - 0.0001
   - 1.
   f_dep_th: !!python/tuple
-  - 0.001
+  - 0.0001
   - 1.
   f_dep_half_width: !!python/tuple
-  - 0.001
+  - 0.0001
   - 1.
   k_pot: !!python/tuple
   - 0.01
@@ -88,7 +88,7 @@ kwargs:
   input_field_width: 90.  # cm
   verbose: 1
   min_delta_weight: -0.2
-  weights_path_distance_threshold: 2.
+  weights_path_distance_threshold: 1.25
 objective_names:
 - spont_residual_score
 - exp1_residual_score
