--- a/config/optimize_biBTSP_WD_D_cli_config.yaml
+++ b/config/optimize_biBTSP_WD_D_cli_config.yaml
@@ -1,21 +1,21 @@
 bounds:
   f_pot_half_width: !!python/tuple
-  - 0.0001
+  - 0.00001
   - 1.
   f_pot_th: !!python/tuple
-  - 0.0001
+  - 0.00001
   - 1.
   f_dep_th: !!python/tuple
-  - 0.0001
+  - 0.00001
   - 1.
   f_dep_half_width: !!python/tuple
-  - 0.0001
+  - 0.00001
   - 1.
   k_pot: !!python/tuple
-  - 0.01
+  - 0.001
   - 10.
   k_dep: !!python/tuple
-  - 0.01
+  - 0.001
   - 10.
   local_signal_decay: !!python/tuple
   - 50.
@@ -25,17 +25,17 @@ bounds:
   - 1750.
   peak_delta_weight: !!python/tuple
   - 1.5
-  - 6.
+  - 4.
 default_params:
 rel_bounds:
-- - local_signal_decay
-  - '>'
-  - 1.0
-  - global_signal_decay
-- - k_pot
-  - '>'
-  - 1.0
-  - k_dep
+#- - local_signal_decay
+#  - '>'
+#  - 1.0
+#  - global_signal_decay
+#- - k_pot
+#  - '>'
+#  - 1.0
+#  - k_dep
 feature_names:
 - spont_delta_val_at_target_peak
 - spont_delta_val_at_model_peak
@@ -88,7 +88,7 @@ kwargs:
   input_field_width: 90.  # cm
   verbose: 1
   min_delta_weight: -0.2
-  weights_path_distance_threshold: 1.25
+  weights_path_distance_threshold: 2.
 objective_names:
 - spont_residual_score
 - exp1_residual_score
