--- a/config/optimize_biBTSP_synthetic_hybrid_norm2_config.yaml
+++ b/config/optimize_biBTSP_synthetic_hybrid_norm2_config.yaml
@@ -9,17 +9,17 @@ bounds:
   - 0.05
   - 1.
   f_dep_th: !!python/tuple
-  - 0.00001
+  - 0.0001
   - 1.
   f_dep_half_width: !!python/tuple
-  - 0.00001
+  - 0.001
   - 1.
   k_pot: !!python/tuple
-  - 0.0001
+  - 0.01
   - 10.
   k_dep: !!python/tuple
-  - 0.0001
-  - 2.
+  - 0.01
+  - 10.
   local_signal_decay: !!python/tuple
   - 50.
   - 1500.
@@ -156,11 +156,11 @@ target_val:
   ramp_amp_after_first_plateau: 4.
 x0:
   dend_depo_mod_range: 6.536533E-01
-  f_dep_half_width: 0.01818251
-  f_dep_th:  0.001778909
+  f_dep_half_width: 0.024546388499999995
+  f_dep_th:  0.0177890
   global_signal_decay: 7.416242E+02
-  k_dep: 0.06322694
-  k_pot: 0.1340521
+  k_dep: 6.702605E-01
+  k_pot: 2.482446296296296
   local_signal_decay: 1.012450E+03
   peak_delta_weight: 4.650342E+00
   spine_half_width: 4.077459E-01
