--- a/config/optimize_biBTSP_synthetic_hybrid_norm_config.yaml
+++ b/config/optimize_biBTSP_synthetic_hybrid_norm_config.yaml
@@ -15,14 +15,14 @@ bounds:
   - 0.0001
   - 1.
   f_dep_half_width: !!python/tuple
-  - 0.0001
+  - 0.001
   - 1.
   k_pot: !!python/tuple
-  - 0.0001
-  - 2.
+  - 0.01
+  - 10.
   k_dep: !!python/tuple
-  - 0.0001
-  - 2.
+  - 0.01
+  - 10.
   local_signal_decay: !!python/tuple
   - 50.
   - 1500.
@@ -33,6 +33,15 @@ bounds:
   - 1.5
   - 6.
 default_params:
+  # f_dep_half_width: 9.091255E-02
+  # f_dep_th: 8.894545E-03
+  global_signal_decay: 7.416242E+02
+  # k_dep: 3.161347E-01
+  # k_pot: 6.702605E-01
+  local_signal_decay: 1.012450E+03
+  peak_delta_weight: 4.650342E+00
+  spine_half_width: 4.077459E-01
+  spine_th: 5.531024E-01
 rel_bounds:
 #- - local_signal_decay
 #  - '>'
@@ -118,8 +127,8 @@ kwargs:
   target_peak_delta_weight: 3.
   target_peak_shift_1: -5.
   target_peak_val_1: 8.
-  target_peak_val_1_depo: 9.
-  target_peak_val_1_hyper: 6.5
+  target_peak_val_1_depo: 9.5
+  target_peak_val_1_hyper: 6.
   target_ramp_offset_1_depo: 10.
   target_ramp_offset_1_hyper: -20.
   target_ramp_offset_2_hyper: -20.
@@ -157,14 +166,14 @@ target_range:
 target_val:
   ramp_amp_after_first_plateau: 4.
 x0:
-  f_dep_half_width: 9.653914E-02
-  f_dep_th: 2.976247E-03
-  global_signal_decay: 6.234602E+02
-  k_dep: 3.109035E-01
-  k_pot: 6.347702E-01
-  local_signal_decay: 8.146532E+02
-  peak_delta_weight: 4.899299E+00
   spine_th_depo: 0.3
   spine_th_hyper: 0.8
-  spine_th: 0.5
-  spine_half_width: 0.5
+  f_dep_half_width: 1.990673E-02
+  f_dep_th: 8.277872E-04
+  global_signal_decay: 7.416242E+02
+  k_dep: 2.792824E-01
+  k_pot: 2.799519E+00
+  local_signal_decay: 1.012450E+03
+  peak_delta_weight: 4.650342E+00
+  spine_half_width: 4.077459E-01
+  spine_th: 5.531024E-01
