--- a/config/optimize_biBTSP_synthetic_hybrid_norm_config.yaml
+++ b/config/optimize_biBTSP_synthetic_hybrid_norm_config.yaml
@@ -39,7 +39,7 @@ default_params:
   # k_dep: 3.161347E-01
   # k_pot: 6.702605E-01
   local_signal_decay: 1.012450E+03
-  peak_delta_weight: 4.650342E+00
+  # peak_delta_weight: 4.650342E+00
   spine_half_width: 4.077459E-01
   spine_th: 5.531024E-01
 rel_bounds:
