--- a/config/optimize_biBTSP_WD_E_cli_config.yaml
+++ b/config/optimize_biBTSP_WD_E_cli_config.yaml
@@ -1,41 +1,41 @@
 bounds:
   f_pot_half_width: !!python/tuple
-  - 0.001
+  - 0.00001
   - 1.
   f_pot_th: !!python/tuple
-  - 0.001
+  - 0.00001
   - 1.
   f_dep_th: !!python/tuple
-  - 0.001
+  - 0.00001
   - 1.
   f_dep_half_width: !!python/tuple
-  - 0.001
+  - 0.00001
   - 1.
   k_pot: !!python/tuple
-  - 0.01
+  - 0.001
   - 10.
   k_dep: !!python/tuple
-  - 0.01
+  - 0.001
   - 10.
   local_signal_decay: !!python/tuple
   - 50.
-  - 1500.
+  - 1750.
   global_signal_decay: !!python/tuple
   - 50.
-  - 1500.
+  - 1750.
   peak_delta_weight: !!python/tuple
   - 1.5
   - 4.
 default_params:
 rel_bounds:
-- - local_signal_decay
-  - '>'
-  - 1.0
-  - global_signal_decay
-- - k_pot
-  - '>'
-  - 1.0
-  - k_dep
+#- - local_signal_decay
+#  - '>'
+#  - 1.0
+#  - global_signal_decay
+#- - k_pot
+#  - '>'
+#  - 1.0
+#  - k_dep
 feature_names:
 - spont_delta_val_at_target_peak
 - spont_delta_val_at_model_peak
@@ -88,11 +88,13 @@ kwargs:
   input_field_width: 90.  # cm
   verbose: 1
   min_delta_weight: -0.2
+  weights_path_distance_threshold: 2.
 objective_names:
 - spont_residual_score
 - exp1_residual_score
 - exp2_residual_score
 - exp3_residual_score
+- weights_path_distance
 optimization_title: biBTSP_WD_E
 param_gen: PopulationAnnealing
 param_names:
@@ -111,14 +113,15 @@ target_range:
   delta_peak_val: 0.01
   residuals: 0.1
   weights_smoothness: 0.015
+  weights_path_distance: 0.1
 target_val:
 x0:
-  global_signal_decay: 4.489167E+02
-  local_signal_decay: 1.250320E+03
-  peak_delta_weight: 3.699263E+00
-  k_dep: 1.347899E-01
-  f_dep_half_width: 8.584021E-03
-  f_dep_th: 2.411664E-03
-  k_pot: 4.834452E-01
-  f_pot_half_width: 6.474074E-02
-  f_pot_th: 1.767498E-01
+  f_dep_half_width: 8.036759E-05
+  f_dep_th: 3.607007E-03
+  f_pot_half_width: 6.251058E-02
+  f_pot_th: 9.526639E-02
+  global_signal_decay: 6.623663E+02
+  k_dep: 7.940945E-02
+  k_pot: 1.489965E+00
+  local_signal_decay: 8.720376E+02
+  peak_delta_weight: 2.221950E+00
