--- a/config/optimize_biBTSP_WD_F_cli_config.yaml
+++ b/config/optimize_biBTSP_WD_F_cli_config.yaml
@@ -1,15 +1,15 @@
 bounds:
   f_dep_th: !!python/tuple
-  - 0.001
+  - 0.00001
   - 1.
   f_dep_half_width: !!python/tuple
-  - 0.001
+  - 0.00001
   - 1.
   k_pot: !!python/tuple
-  - 0.01
+  - 0.001
   - 10.
   k_dep: !!python/tuple
-  - 0.01
+  - 0.001
   - 10.
   local_signal_decay: !!python/tuple
   - 50.
@@ -19,16 +19,16 @@ bounds:
   - 1750.
   peak_delta_weight: !!python/tuple
   - 1.5
-  - 6.
+  - 4.
 default_params:
 rel_bounds:
-# - - local_signal_decay
-#   - '>'
-#   - 1.0
-#   - global_signal_decay
-# - - k_pot
-#   - '>'
-#   - 1.0
+#- - local_signal_decay
+#  - '>'
+#  - 1.0
+#  - global_signal_decay
+#- - k_pot
+#  - '>'
+#  - 1.0
 #  - k_dep
 feature_names:
 - spont_delta_val_at_target_peak
@@ -82,7 +82,7 @@ kwargs:
   input_field_width: 90.  # cm
   verbose: 1
   min_delta_weight: -0.2
-  weights_path_distance_threshold: 1.25
+  weights_path_distance_threshold: 2.
 objective_names:
 - spont_residual_score
 - exp1_residual_score
