--- a/config/optimize_biBTSP_synthetic_hybrid_config.yaml
+++ b/config/optimize_biBTSP_synthetic_hybrid_config.yaml
@@ -145,13 +145,13 @@ target_range:
 target_val:
   ramp_amp_after_first_plateau: 4.
 x0:
-  f_dep_half_width: 9.653914E-02
-  f_dep_th: 2.976247E-03
-  global_signal_decay: 6.234602E+02
-  k_dep: 3.109035E-01
-  k_pot: 6.347702E-01
-  local_signal_decay: 8.146532E+02
-  peak_delta_weight: 4.899299E+00
-  dend_depo_mod_range: 0.5
-  spine_th: 0.5
-  spine_half_width: 0.5
+  dend_depo_mod_range: 6.536533E-01
+  f_dep_half_width: 9.091255E-02
+  f_dep_th: 8.894545E-03
+  global_signal_decay: 7.416242E+02
+  k_dep: 3.161347E-01
+  k_pot: 6.702605E-01
+  local_signal_decay: 1.012450E+03
+  peak_delta_weight: 4.650342E+00
+  spine_half_width: 4.077459E-01
+  spine_th: 5.531024E-01
