--- a/config/optimize_biBTSP_synthetic_config.yaml
+++ b/config/optimize_biBTSP_synthetic_config.yaml
@@ -1,14 +1,14 @@
 bounds:
-  f_pot_peak: !!python/tuple
-  - 0.001
-  - 1.
   f_pot_th: !!python/tuple
+  - 0.0001
+  - 1.
+  f_pot_half_width: !!python/tuple
   - 0.001
   - 1.
   f_dep_th: !!python/tuple
-  - 0.001
+  - 0.0001
   - 1.
-  f_dep_peak: !!python/tuple
+  f_dep_half_width: !!python/tuple
   - 0.001
   - 1.
   k_pot: !!python/tuple
@@ -17,39 +17,25 @@ bounds:
   k_dep: !!python/tuple
   - 0.01
   - 10.
-  local_signal_rise: !!python/tuple
-  - 5.
-  - 200.
   local_signal_decay: !!python/tuple
   - 50.
-  - 2500.
-  global_signal_rise: !!python/tuple
-  - 5.
-  - 200.
+  - 1500.
   global_signal_decay: !!python/tuple
   - 50.
-  - 2500.
+  - 1500.
   peak_delta_weight: !!python/tuple
   - 1.5
-  - 4.
+  - 6.
 default_params:
 rel_bounds:
-- - local_signal_decay
-  - '>'
-  - 1.0
-  - local_signal_rise
-- - global_signal_decay
-  - '>'
-  - 1.0
-  - global_signal_rise
-- - local_signal_decay
-  - '>'
-  - 1.0
-  - global_signal_decay
-- - k_pot
-  - '>'
-  - 1.0
-  - k_dep
+# - - local_signal_decay
+#   - '>'
+#   - 1.0
+#   - global_signal_decay
+# - - k_pot
+#   - '>'
+#   - 1.0
+#  - k_dep
 feature_names:
 - induction1_delta_val_at_target_peak
 - induction1_delta_val_at_model_peak
@@ -79,37 +65,41 @@ get_features_stages:
 get_objectives:
   optimize_biBTSP_synthetic: get_objectives
 kwargs:
-  data_file_name: 20190711_biBTSP_data_calibrated_input.hdf5
+  data_file_name: 20200527_biBTSP_data.hdf5
   input_field_width: 90.  # cm
   verbose: 1
+  num_induction_laps: 3
   min_delta_weight: -0.2
-  default_run_vel: 30.
+  max_dend_depo: 10.
+  default_run_vel: 25.
   induction_loc:
-    '1': 90.
-    '2': 0.
+    '1': 120.
+    '2': 45.
+  target_ramp_width_1: 150.
+  target_ramp_width_2: 80.
   target_peak_delta_weight: 3.
   target_peak_shift_1: -10.
-  target_peak_shift_2: 0.
+  target_peak_shift_2: -10.
   target_peak_val_1: 8.
-  target_peak_val_2: 8.
-  target_min_val_2: 3.
+  target_asymmetry_1: 1.8
+  target_asymmetry_2: 2.2
+  target_delta_peak_val_2: -5.
+  weights_path_distance_threshold: 1.25
 objective_names:
 - induction1_residual_score
 - induction2_residual_score
-- self_consistent_delta_residual_score
-- ramp_amp_after_first_plateau
-optimization_title: biBTSP_synthetic
+# - ramp_amp_after_first_plateau
+- weights_path_distance
+optimization_title: biBTSP_synthetic_alt
 param_gen: PopulationAnnealing
 param_names:
-- f_pot_peak
 - f_pot_th
+- f_pot_half_width
 - f_dep_th
-- f_dep_peak
+- f_dep_half_width
 - k_pot
 - k_dep
-- local_signal_rise
 - local_signal_decay
-- global_signal_rise
 - global_signal_decay
 - peak_delta_weight
 target_range:
@@ -117,19 +107,18 @@ target_range:
   delta_min_val: 0.01
   delta_peak_val: 0.01
   residuals: 0.1
-  weights_smoothness: 0.005
+  weights_smoothness: 0.015
   ramp_amp_after_first_plateau: 0.01
+  weights_path_distance: 0.1
 target_val:
-  ramp_amp_after_first_plateau: 5.
+  ramp_amp_after_first_plateau: 4.
 x0:
-  f_dep_peak: 1.194999E-01
-  f_dep_th: 7.820899E-03
-  f_pot_peak: 9.828062E-01
+  f_pot_half_width: 9.828062E-01
   f_pot_th: 5.262555E-01
-  global_signal_decay: 2.232987E+02
-  global_signal_rise: 3.183521E+01
-  k_dep: 3.498200E-01
-  k_pot: 1.172080E+00
-  local_signal_decay: 1.127795E+03
-  local_signal_rise: 1.597686E+02
-  peak_delta_weight: 2.400251E+00
+  f_dep_half_width: 8.100359E-02
+  f_dep_th: 1.279724E-02
+  global_signal_decay: 7.826026E+02
+  k_dep: 2.088454E-01
+  k_pot: 4.893109E-01
+  local_signal_decay: 1.075317E+03
+  peak_delta_weight: 4.392292E+00
