--- a/config/simulate_biBTSP_synthetic_network_orig_config.yaml
+++ b/config/simulate_biBTSP_synthetic_network_orig_config.yaml
@@ -2,13 +2,11 @@ data_file_name: 20200527_biBTSP_data.hdf5
 input_field_width: 90.  # cm
 min_delta_weight: -0.2
 initial_ramp_peak_val: 8.
-target_peak_shift: -5.
-target_ramp_width: 150.
-default_run_vel: 25.
-num_cells: 500
+target_peak_shift: -10.
+num_cells: 1000
 initial_fraction_active: 0.
-basal_target_representation_density: 0.5
-reward_target_representation_density: 1.
+basal_target_representation_density: 0.3
+reward_target_representation_density: 0.5
 track_phases:
   - lap_type: explore
     label: 'novel explore'
@@ -24,7 +22,7 @@ track_phases:
     num_laps: 5
     color: 'k'
 peak_basal_plateau_prob_per_sec: 0.0075
-peak_reward_plateau_prob_per_sec: 0.04
+peak_reward_plateau_prob_per_sec: 0.03
 basal_plateau_prob_ramp_sensitivity: 0.
 reward_plateau_prob_ramp_sensitivity: 2.
 seed_offset: 90000000000
@@ -36,10 +34,14 @@ target_range:
   residuals: 0.1
   weights_smoothness: 0.015
 x0:
-  f_dep_half_width: 8.100359E-02
-  f_dep_th: 1.279724E-02
-  global_signal_decay: 7.826026E+02
-  k_dep: 2.088454E-01
-  k_pot: 4.893109E-01
-  local_signal_decay: 1.075317E+03
-  peak_delta_weight: 4.392292E+00
+  f_dep_peak: 1.194999E-01
+  f_dep_th: 7.820899E-03
+  f_pot_peak: 9.828062E-01
+  f_pot_th: 5.262555E-01
+  global_signal_decay: 2.232987E+02
+  global_signal_rise: 3.183521E+01
+  k_dep: 3.498200E-01
+  k_pot: 1.172080E+00
+  local_signal_decay: 1.127795E+03
+  local_signal_rise: 1.597686E+02
+  peak_delta_weight: 2.400251E+00
