--- a/config/optimize_biBTSP_synthetic_WD_C_config.yaml
+++ b/config/optimize_biBTSP_synthetic_WD_C_config.yaml
@@ -46,10 +46,6 @@ rel_bounds:
   - '>'
   - 1.0
   - global_signal_decay
-# - - local_signal_decay
-#   - '>'
-#   - 1.0
-#   - global_signal_decay
 # - - k_pot
 #   - '>'
 #   - 1.0
@@ -73,15 +69,15 @@ feature_names:
 - induction2_delta_val_at_model_min
 - ramp_amp_after_first_plateau
 update_context:
-- - optimize_biBTSP_synthetic
+- - optimize_biBTSP_synthetic_WD_C
   - update_model_params
 get_features_stages:
-- source: optimize_biBTSP_synthetic
+- source: optimize_biBTSP_synthetic_WD_C
   get_args_static: get_args_static_model_ramp
   compute_features: compute_features_model_ramp
   filter_features: filter_features_model_ramp
 get_objectives:
-  optimize_biBTSP_synthetic: get_objectives
+  optimize_biBTSP_synthetic_WD_C: get_objectives
 kwargs:
   data_file_name: 20200527_biBTSP_data.hdf5
   input_field_width: 90.  # cm
@@ -94,13 +90,13 @@ kwargs:
     '1': 120.
     '2': 45.
   target_ramp_width_1: 150.
-  target_ramp_width_2: 80.
+  target_ramp_width_2: 100.
   target_peak_delta_weight: 3.
-  target_peak_shift_1: -10.
-  target_peak_shift_2: -10.
+  target_peak_shift_1: -12.5
+  target_peak_shift_2: -12.5
   target_peak_val_1: 8.
   target_asymmetry_1: 1.8
-  target_asymmetry_2: 2.2
+  target_asymmetry_2: 1.8
   target_delta_peak_val_2: -5.
   weights_path_distance_threshold: 1.25
 objective_names:
@@ -108,7 +104,7 @@ objective_names:
 - induction2_residual_score
 # - ramp_amp_after_first_plateau
 - weights_path_distance
-optimization_title: biBTSP_synthetic_alt
+optimization_title: biBTSP_synthetic_WD_C
 param_gen: PopulationAnnealing
 param_names:
 - f_pot_th
