--- a/config/simulate_biBTSP_synthetic_network_orig_config.yaml
+++ b/config/simulate_biBTSP_synthetic_network_orig_config.yaml
@@ -3,10 +3,10 @@ input_field_width: 90.  # cm
 min_delta_weight: -0.2
 initial_ramp_peak_val: 8.
 target_peak_shift: -10.
-num_cells: 1000
+num_cells: 500
 initial_fraction_active: 0.
-basal_target_representation_density: 0.3
-reward_target_representation_density: 0.5
+basal_target_representation_density: 0.5
+reward_target_representation_density: 1.
 track_phases:
   - lap_type: explore
     label: 'novel explore'
@@ -22,7 +22,7 @@ track_phases:
     num_laps: 5
     color: 'k'
 peak_basal_plateau_prob_per_sec: 0.0075
-peak_reward_plateau_prob_per_sec: 0.03
+peak_reward_plateau_prob_per_sec: 0.04
 basal_plateau_prob_ramp_sensitivity: 0.
 reward_plateau_prob_ramp_sensitivity: 2.
 seed_offset: 90000000000
