--- a/config/optimize_biBTSP_VD_G_cli_config.yaml
+++ b/config/optimize_biBTSP_VD_G_cli_config.yaml
@@ -11,9 +11,9 @@ bounds:
   global_signal_decay: !!python/tuple
   - 100.
   - 1750.
-  peak_delta_weight: !!python/tuple
-  - 1.5
-  - 4.
+  plateau_delta_depo: !!python/tuple
+  - 0.
+  - 20.
 default_params:
 rel_bounds:
 - - local_signal_decay
@@ -58,19 +58,19 @@ feature_names:
 - exp3_delta_val_at_target_min
 - exp3_delta_val_at_model_min
 update_context:
-- - optimize_biBTSP_WD_G
+- - optimize_biBTSP_VD_G
   - update_model_params
 get_features_stages:
-- source: optimize_biBTSP_WD_G
+- source: optimize_biBTSP_VD_G
   get_args_static: get_args_static_signal_amplitudes
   compute_features: compute_features_signal_amplitudes
   filter_features: filter_features_signal_amplitudes
-- source: optimize_biBTSP_WD_G
+- source: optimize_biBTSP_VD_G
   get_args_dynamic: get_args_dynamic_model_ramp
   compute_features: compute_features_model_ramp
   filter_features: filter_features_model_ramp
 get_objectives:
-  optimize_biBTSP_WD_G: get_objectives
+  optimize_biBTSP_VD_G: get_objectives
 kwargs:
   data_file_name: 20200527_biBTSP_data.hdf5
   input_field_width: 90.  # cm
@@ -83,14 +83,14 @@ objective_names:
 - exp2_residual_score
 - exp3_residual_score
 - weights_path_distance
-optimization_title: biBTSP_WD_G
+optimization_title: biBTSP_VD_G
 param_gen: PopulationAnnealing
 param_names:
 - k_pot
 - k_dep
 - local_signal_decay
 - global_signal_decay
-- peak_delta_weight
+- plateau_delta_depo
 target_range:
   ramp_offset: 0.01
   delta_min_val: 0.01
@@ -100,8 +100,8 @@ target_range:
   weights_path_distance: 0.1
 target_val:
 x0:
-  global_signal_decay: 5.012775E+01
-  k_dep: 1.602512E-01
-  k_pot: 6.549279E+00
-  local_signal_decay: 4.548929E+02
-  peak_delta_weight: 1.805131E+00
+  global_signal_decay: 1.283906E+03
+  k_dep: 1.292171E-01
+  k_pot: 7.630387E-01
+  local_signal_decay: 1.536536E+03
+  plateau_delta_depo: 3.962006E+00
