--- a/config/optimize_biBTSP_WD_E_cli_config.yaml
+++ b/config/optimize_biBTSP_WD_E_cli_config.yaml
@@ -1,6 +1,6 @@
 bounds:
   f_pot_half_width: !!python/tuple
-  - 0.00001
+  - 0.00004
   - 1.
   f_pot_th: !!python/tuple
   - 0.00001
@@ -9,7 +9,7 @@ bounds:
   - 0.00001
   - 1.
   f_dep_half_width: !!python/tuple
-  - 0.00001
+  - 0.00004
   - 1.
   k_pot: !!python/tuple
   - 0.001
@@ -18,24 +18,24 @@ bounds:
   - 0.001
   - 10.
   local_signal_decay: !!python/tuple
-  - 50.
+  - 100.
   - 1750.
   global_signal_decay: !!python/tuple
-  - 50.
+  - 100.
   - 1750.
   peak_delta_weight: !!python/tuple
   - 1.5
   - 4.
 default_params:
 rel_bounds:
-#- - local_signal_decay
-#  - '>'
-#  - 1.0
-#  - global_signal_decay
-#- - k_pot
-#  - '>'
-#  - 1.0
-#  - k_dep
+- - local_signal_decay
+  - '>'
+  - 1.0
+  - global_signal_decay
+- - k_pot
+  - '>'
+  - 1.0
+  - k_dep
 feature_names:
 - spont_delta_val_at_target_peak
 - spont_delta_val_at_model_peak
@@ -84,7 +84,7 @@ get_features_stages:
 get_objectives:
   optimize_biBTSP_WD_E: get_objectives
 kwargs:
-  data_file_name: 20200527_biBTSP_data.hdf5
+  data_file_name: 20201123_biBTSP_data.hdf5
   input_field_width: 90.  # cm
   verbose: 1
   min_delta_weight: -0.2
