--- a/config/optimize_biBTSP_synthetic_WD_NMDAR_exclude_hyper2_config.yaml
+++ b/config/optimize_biBTSP_synthetic_WD_NMDAR_exclude_hyper2_config.yaml
@@ -32,6 +32,16 @@ bounds:
   peak_delta_weight: !!python/tuple
   - 1.5
   - 6.
+default_params:
+  # f_dep_half_width: 9.091255E-02
+  # f_dep_th: 8.894545E-03
+  global_signal_decay: 7.416242E+02
+  # k_dep: 3.161347E-01
+  # k_pot: 6.702605E-01
+  local_signal_decay: 1.012450E+03
+  # peak_delta_weight: 4.650342E+00
+  spine_half_width: 4.077459E-01
+  spine_th: 5.531024E-01
 rel_bounds:
 #- - local_signal_decay
 #  - '>'
@@ -92,15 +102,15 @@ feature_names:
 - induction2_hyper_delta_val_at_model_min
 - ramp_amp_after_first_plateau
 update_context:
-- - optimize_biBTSP_synthetic_hybrid_norm
+- - optimize_biBTSP_synthetic_WD_NMDAR
   - update_model_params
 get_features_stages:
-- source: optimize_biBTSP_synthetic_hybrid_norm
+- source: optimize_biBTSP_synthetic_WD_NMDAR
   get_args_static: get_args_static_model_ramp
   compute_features: compute_features_model_ramp
   filter_features: filter_features_model_ramp
 get_objectives:
-  optimize_biBTSP_synthetic_hybrid_norm: get_objectives
+  optimize_biBTSP_synthetic_WD_NMDAR: get_objectives
 kwargs:
   data_file_name: 20201123_biBTSP_data.hdf5
   input_field_width: 90.  # cm
@@ -131,7 +141,7 @@ objective_names:
 - induction2_hyper_residual_score
 # - ramp_amp_after_first_plateau
 - weights_path_distance
-optimization_title: biBTSP_synthetic_hybrid_norm
+optimization_title: biBTSP_synthetic_WD_NMDAR
 param_gen: PopulationAnnealing
 param_names:
 - spine_th_depo
@@ -156,14 +166,14 @@ target_range:
 target_val:
   ramp_amp_after_first_plateau: 4.
 x0:
-  f_dep_half_width: 0.012  # beta: 160.
-  f_dep_th: 0.0059
-  global_signal_decay: 750.
-  k_dep: 0.23
-  k_pot: 2.4
-  local_signal_decay: 1000.
-  peak_delta_weight: 4.6
-  spine_half_width: 0.41  # beta: 4.9
-  spine_th: 0.55
-  spine_th_depo: 0.31
-  spine_th_hyper: 0.86
+  f_dep_half_width: 1.225082E-02
+  f_dep_th: 5.874827E-03
+  global_signal_decay: 7.416242E+02
+  k_dep: 2.285727E-01
+  k_pot: 2.406468E+00
+  local_signal_decay: 1.012450E+03
+  peak_delta_weight: 4.622392E+00
+  spine_half_width: 4.077459E-01
+  spine_th: 5.531024E-01
+  spine_th_depo: 3.140178E-01
+  spine_th_hyper: 8.621754E-01
