--- a/config/simulate_biBTSP_synthetic_WD_config.yaml
+++ b/config/simulate_biBTSP_synthetic_WD_config.yaml
@@ -6,6 +6,7 @@ max_dend_depo: 10.
 default_run_vel: 25.
 default_track_length: 187.
 default_num_inputs: 200
+expand_track: 3
 induction_loc:
   '1': 120.
   '2': 45.
@@ -41,12 +42,12 @@ target_range:
 target_val:
   ramp_amp_after_first_plateau: 4.
 x0:
-  f_dep_half_width: 9.977173E-02
-  f_dep_th: 2.618154E-02
-  f_pot_half_width: 4.541096E-01
-  f_pot_th: 4.150117E-01
-  global_signal_decay: 4.370065E+02
-  k_dep: 4.249387E-01
-  k_pot: 1.109682E+00
-  local_signal_decay: 1.664103E+03
-  peak_delta_weight: 3.680311E+00
+  f_dep_half_width: 3.165316E-02
+  f_dep_th: 1.111949E-03
+  f_pot_half_width: 3.628727E-01
+  f_pot_th: 2.464920E-01
+  global_signal_decay: 2.003253E+02
+  k_dep: 5.564307E-01
+  k_pot: 3.377128E+00
+  local_signal_decay: 1.611058E+03
+  peak_delta_weight: 3.091679E+00
