--- a/config/optimize_biBTSP_2022_xiao_config.yaml
+++ b/config/optimize_biBTSP_2022_xiao_config.yaml
@@ -84,7 +84,7 @@ get_features_stages:
 get_objectives:
   optimize_biBTSP_2022_xiao: get_objectives
 kwargs:
-  data_file_name: 20220825_1652_biBTSP_CA1_data.hdf5
+  data_file_name: 2022_xiao_BTSP_data.hdf5
   input_field_width: 90.  # cm
   verbose: 1
   min_delta_weight: -0.2
